	to `format'.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-get-and-render-timeline): Likewise.

	* twittering-mode.el (twittering-read-username-with-completion):
	Convert a list of username strings to an alist before calling
	`completing-read' to work on Emacs21; same as
	`twittering-read-timeline-spec-with-completion'.

2010-01-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	`save-excursion' had no effect because of the following
	`set-buffer'. This is fixed so that `save-excursion' saves the
	state of `temp-buffer'.
	(twittering-get-response-header): Likewise.
	(twittering-get-response-body): Likewise.
	(twittering-tinyurl-get): Likewise.
	(twittering-tinyurl-get): `buffer' are killed even if
	`search-forward-regexp' fails.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-percent-encode): bug fix:
	'\n','\r','\t' were not encoded correctly.

2010-01-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): Add
	suggestion into a docstring.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-not-blank-p): bug fix:
	always return nil with strings with trailing newline.

2010-01-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-image-type): Try to detect image
	type with `image-type-from-data' at first.
	(twittering-retrieve-image): Do not invoke `convert' if Emacs
	supports the image type and resize is not required.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tmp-dir): delete
	(twittering-icon-mode): don't make temp dir
	(twittering-image-data-table): add. hash table where image data
	are stored.  key:(<url> . <size>),value:(<type> . <binary-data>)
	(twittering-use-wget): delete
	(twittering-image-type): re-implemented. Now it just returns a
	type of a given image.